k8s/02-collab-api-network.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: collab-api-network-policy
  namespace: peerprep
spec:
  podSelector:
    matchLabels:
      peerprep.network.collab-api: "true"
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
      - podSelector:
          matchLabels:
            peerprep.network.collab-api: "true"
  egress:
    - to:
      - podSelector:
          matchLabels:
            peerprep.network.collab-api: "true"
